# libtmux

./: .coveragerc  .gitignore  .prettierrc  .python-version  .tmuxp.yaml  .tool-versions  .travis.yml  .windsurfrules  AGENTS.md  CHANGES  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  MIGRATION  Makefile  Pipfile  README.md  README.rst  TODO  bootstrap_env.py  conftest.py  fastmcp.json  justfile  pyproject.toml  setup.cfg  setup.py  tox.ini
.claude-plugin/: plugin.json
.claude-plugin/agents/: parity-analyzer.md
.claude-plugin/commands/: implement-command.md  parity-audit.md  version-diff.md
.claude-plugin/scripts/: extract-libtmux-methods.sh  extract-tmux-commands.sh
.claude/agents/: parity-analyzer.md
.claude/commands/: implement-command.md  version-diff.md
.cursor/rules/: avoid-debug-loops.mdc  dev-loop.mdc  git-commits.mdc
.github/workflows/: codeql-analysis.yml  docs.yml  libtmux-ci.yml  publish-docs.yml  tests.yml
agents/: parity-analyzer.md
astro/: .gitignore  AGENTS.md  README.md  biome.jsonc  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
astro/python/pyautodoc_sidecar/: pyproject.toml
astro/python/pyautodoc_sidecar/src/pyautodoc_sidecar/: __init__.py  __main__.py  cli.py  introspect.py  parse.py
commands/: parity-audit.md
doc/: Makefile  about.rst  api.rst  conf.py  developing.rst  glossary.rst  index.rst  internals.rst  panes.rst  properties.rst  quickstart.rst  roadmap.rst  servers.rst  sessions.rst  traversal.rst  traversing.rst  windows.rst
doc/_static/: libtmux.css
doc/_templates/: layout.html  more.html  page.html  star.html
docs/: .gitignore  AGENTS.md  Makefile  __init__.py  about.md  about.rst  api.md  api.rst  conf.py  conftest.py  developing.md  experimental.md  glossary.md  glossary.rst  history.md  history.rst  index.md  index.rst  justfile  manifest.json  panes.md  panes.rst  properties.md  pytest-plugin.md  quickstart.md  redirects.txt  servers.md  sessions.md  traversal.md  windows.md
docs/_ext/: code.py  conftest.py  spf_demo_fixtures.py  sphinx_fonts.py  sphinx_pytest_fixtures.py  tmuxop.py
docs/_templates/: book.html  layout.html  page.html
docs/api/: async.md  compatibility.md  constants.md  deprecations.md  exceptions.md  hooks.md  index.md  libtmux.client.md  libtmux.common.md  libtmux.neo.md  libtmux.resurrect.md  libtmux.server.md  libtmux.session.md  libtmux.window.md  options.md  public-api.md  servers.md  snapshot.md  windows.md
docs/demo/: index.md  sphinx-pytest-fixtures-badges.md
docs/experiment/: index.md
docs/internals/: frozen_dataclass.md  frozen_dataclass_sealable.md  index.md  query_list.md  sparse_array.md  test.md  textframe.md  waiter.md
docs/project/: code-style.md  contributing.md  index.md  public-api.md  releasing.md
docs/pytest-plugin/: advanced-techniques.md  fixtures.md  getting-started.md  index.md  test.md  usage-examples.md
docs/reference/: common.md  exceptions.md  index.md  panes.md  properties.md  servers.md  sessions.md  windows.md
docs/test-helpers/: constants.md  environment.md  index.md  random.md  temporary.md
docs/topics/: advanced_scripting.md  architecture.md  automation.md  automation_patterns.md  clients.md  configuration.md  context_managers.md  control_mode.md  design-decisions.md  engines.md  filtering.md  floating_panes.md  format-tokens.md  index.md  options_and_hooks.md  pane_interaction.md  public-vs-internal.md  resurrect.md  self_location.md  snapshots.md  traversal.md  use_cases.md  workspace_setup.md
examples/: async_demo.py  hybrid_async_demo.py  test_examples.py
libtmux/: __about__.py  __init__.py  _compat.py  common.py  conftest.py  exc.py  formats.py  pane.py  pytest_plugin.py  server.py  session.py  test.py  window.py
notes/: 2025-03-02-architecture-plan.md  2025-03-02-snapshot-structure-redesign.md  architecture.md  plan.md
requirements/: dev.txt  doc.txt  test.txt
scripts/: bench_engines.py  mcp_swap.py
scripts/bench-results/: RESULTS.md  grid.json  wait.json
skills/tmux-parity/: SKILL.md
src/libtmux/: __about__.py  __init__.py  _compat.py  _rust.py  client.py  common.py  common_async.py  conftest.py  constants.py  errors.py  exc.py  formats.py  hooks.py  neo.py  options.py  otel.py  pane.py  pytest_plugin.py  server.py  session.py  snapshot.py  test.py  window.py
tests/: __init__.py  conftest.py  helpers.py  test_async.py  test_async_acmd.py  test_async_hybrid.py  test_async_tmux_cmd.py  test_client.py  test_command_runner.py  test_common.py  test_control_client_logs.py  test_control_mode.py  test_control_mode_engine.py  test_control_mode_live.py  test_control_mode_parser.py  test_control_mode_regressions.py  test_control_mode_subscription.py  test_control_sandbox.py  test_dataclasses.py  test_engine_protocol.py  test_engines.py  test_from_env.py  test_hooks.py  test_hooks_compat.py  test_logging.py  test_mcp_swap.py  test_neo.py  test_options.py  test_pane.py  test_pane_capture_frame.py  test_pane_capture_pane.py  test_pytest_plugin.py  test_race_conditions.py  test_resolution.py  test_resurrect_archives.py  test_resurrect_continuum.py  test_resurrect_file.py  test_resurrect_processes.py  test_resurrect_storage.py  test_server.py  (+7 more)
tests/_experimental/: __init__.py
tests/_internal/: test_dataclasses.py  test_frozen_dataclass.py  test_frozen_dataclass_sealable.py  test_query_list.py  test_retry_extended.py  test_waiter.py
tests/asyncio/: README.md  __init__.py  test_acmd.py  test_basic.py  test_docstring_examples.py  test_environment.py  test_hybrid.py  test_integration.py  test_pane.py  test_server.py  test_session.py  test_tmux_cmd.py  test_window.py
tests/chainable_commands_experiment/: __init__.py  ast_api.py  async_deferred_plan_api.py  async_query_api.py  auto_batch_api.py  builder_api.py  command_object_api.py  context_api.py  dag_api.py  decorator_api.py  deferred_plan_api.py  descriptor_api.py  document_query_api.py  expression_api.py  generated_client_api.py  lazy_plan_api.py  orchestration_api.py  queryset_api.py  runnable_api.py  selection_api.py  (+23 more)
tools/: async_to_sync.py
(+554 files in other folders)
