[project]
name = "pyautodoc-sidecar"
version = "0.0.1"
description = "Python sidecar for the libtmux autodoc pipeline."
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyautodoc_sidecar"]
